# Copyright 2025 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "repolint"
version = "0.1.0"
description = "Repository compliance dashboard for Canonical Platform Engineering."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
# No external runtime dependencies – the script relies entirely on the stdlib
# and the 'gh' CLI tool available in the execution environment.
dependencies = []

[project.scripts]
repolint = "repolint.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repolint"]

[tool.uv]
package = true

# ---------------------------------------------------------------------------
# Dependency groups (used by tox environments via tox-uv)
# ---------------------------------------------------------------------------
[dependency-groups]
fmt = [
  "ruff",
]
lint = [
  "codespell",
  "mypy",
  "pep8-naming",
  "pytest",
  "ruff",
]
unit = [
  "coverage[toml]",
  "pytest",
]
coverage-report = [
  "coverage[toml]",
]
static = [
  "bandit[toml]",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["A", "B", "C", "CPY", "D", "E", "F", "I", "N", "RUF", "S", "SIM", "TC", "UP", "W"]
ignore = [
  "B904",
  "D107",
  "D203",
  "D204",
  "D205",
  "D213",
  "D215",
  "D400",
  "D404",
  "D406",
  "D407",
  "D408",
  "D409",
  "D413",
  "E501",
  "S105",
  "S603",
  "TC002",
  "TC006",
  "UP006",
  "UP007",
  "UP035",
  "UP045",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "D100", "D101", "D102", "D103", "D104", "D212", "D415", "D417", "S"]

[tool.ruff.lint.flake8-copyright]
author = "Canonical Ltd."
min-file-size = 1
notice-rgx = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

# ---------------------------------------------------------------------------
# Codespell
# ---------------------------------------------------------------------------
[tool.codespell]
skip = "build,dist,venv,.tox,.git,.mypy_cache,.ruff_cache,.coverage,htmlcov,uv.lock"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
pythonpath = ["src"]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["src/repolint"]

[tool.coverage.report]
show_missing = true

# ---------------------------------------------------------------------------
# Tox (legacy_tox_ini for tox < 4.21 compatibility; tox.toml is used by tox-uv)
# ---------------------------------------------------------------------------
[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist = true
skip_missing_interpreters = true
envlist = lint, unit, static, coverage-report

[testenv]
setenv =
    PYTHONPATH = {toxinidir}/src
    PY_COLORS = 1

[testenv:fmt]
description = Apply coding style standards to code
deps = ruff
commands =
    ruff check --fix --select I {toxinidir}/src {toxinidir}/tests
    ruff format {toxinidir}/src {toxinidir}/tests

[testenv:lint]
description = Check code against coding style standards
deps =
    codespell
    mypy
    pep8-naming
    pytest
    ruff
commands =
    codespell {toxinidir}
    ruff format --check --diff {toxinidir}/src {toxinidir}/tests
    ruff check {toxinidir}/src {toxinidir}/tests
    mypy {toxinidir}/src {toxinidir}/tests

[testenv:lint-fix]
description = Apply coding style standards to code
deps = ruff
commands =
    ruff check --fix --fix-only {toxinidir}/src {toxinidir}/tests

[testenv:unit]
description = Run unit tests
deps =
    coverage[toml]
    pytest
commands =
    coverage run --source={toxinidir}/src -m pytest {toxinidir}/tests/unit -v --tb native -s {posargs}
    coverage report

[testenv:coverage-report]
description = Create test coverage report
deps = coverage[toml]
commands = coverage report

[testenv:static]
description = Run static analysis checks
deps = bandit[toml]
commands =
    bandit -c {toxinidir}/pyproject.toml -r {toxinidir}/src {toxinidir}/tests
"""

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
explicit_package_bases = true
ignore_missing_imports = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ---------------------------------------------------------------------------
# Bandit
# ---------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["/venv/", ".tox/"]

[tool.bandit.assert_used]
skips = ["*/*test.py", "*/test_*.py", "*tests/*.py"]
